--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-site: Made Jekyll Theme
+site: Anateo - formations par visio seul ou en groupe
 
 url: 
-baseurl: 
+baseurl: /made
 
 collections:
   pages:
