--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: Anateo
+  site_title: Made
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -65,7 +65,7 @@ color_settings:
   text_dark_color: '#202224'
   text_medium_color: '#6C7A89'
   text_light_color: '#AEB3BB'
-  accent_color: '#30B0C7'
+  accent_color: '#4C60E6'
   border_color: '#ECEDEF'
   error_color: '#D64541'
 
