--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,6 @@ collections:
   posts:
     output: true
     permalink: /blog/:slug
-  projects:
-    output: true
-    permalink: /project/:slug
 
 defaults:
   -
@@ -36,6 +33,12 @@ defaults:
     scope:
       path: ""
       type: "projects"
+    values:
+      layout: "project"
+  -
+    scope:
+      path: ""
+      type: "copie"
     values:
       layout: "project"
 
