--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: Made
+  site_title: Anateo
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -8,15 +8,15 @@ header_settings:
 
 menu_settings:
   menu_items:
-    - title: 'Formations'
+    - title: 'Projects'
       url: '/'
-    - title: 'Actualités'
+    - title: 'Blog'
       url: '/blog/'
 
 footer_settings:
   logo_image: 
   logo_width: 100
-  tagline: Découvrez, échangez, discutez et apprennez
+  tagline: A beautiful, minimal portfolio Jekyll theme
 
 hero_settings:
   background_image: /images/backgrounds/background-hero.svg
@@ -65,7 +65,7 @@ color_settings:
   text_dark_color: '#202224'
   text_medium_color: '#6C7A89'
   text_light_color: '#AEB3BB'
-  accent_color: '#4C60E6'
+  accent_color: '#30B0C7'
   border_color: '#ECEDEF'
   error_color: '#D64541'
 
