--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,9 @@ collections:
   projects:
     output: true
     permalink: /project/:slug
+  copie:
+    output: true
+    permalink: /copie/:slug
 
 defaults:
   -
@@ -36,6 +39,12 @@ defaults:
     scope:
       path: ""
       type: "projects"
+    values:
+      layout: "project"
+  -
+    scope:
+      path: ""
+      type: "copie"
     values:
       layout: "project"
 
